--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
     "test": "bun test"
   },
   "dependencies": {
+    "@elysiajs/swagger": "^1.0.3",
     "elysia": "latest"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "bun-types": "latest",
+    "eslint": "^8.54.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1"
   },
   "module": "src/index.js"
 }
